fix: update plugin using remark-mermaidjs

--- a/.yalc/gatsby-remark-mermaid/package.json
+++ b/.yalc/gatsby-remark-mermaid/package.json
@@ -26,11 +26,12 @@
   "homepage": "https://github.com/remcohaszing/gatsby-remark-mermaid#readme",
   "dependencies": {
     "mermaid": "^9.2.2",
+    "remark-mermaidjs": "^3.1.0",
     "unist-util-visit": "2.0.3"
   },
   "peerDependencies": {
     "puppeteer": "*",
     "puppeteer-core": "*"
   },
-  "yalcSig": "12ea3f239ff1ae5bcbaf5b00a9a2ad9c"
+  "yalcSig": "fc63ad038c5e48134cc764fbde5223eb"
 }
