--- a/package.json
+++ b/package.json
@@ -23,22 +23,20 @@
     "rehype-slug": "4.0.1",
     "remark-external-links": "8.0.0",
     "remark-gfm": "^1.0.0",
-    "remark-mermaidjs": "^2.1.1",
     "remark-unwrap-images": "^2.1.0",
     "slugify": "^1.6.5",
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
-    "puppeteer": "^19.2.2",
-    "puppeteer-core": "^19.2.2"
+    "puppeteer": "^19.2.2"
   },
   "keywords": [
     "gatsby"
   ],
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop --open",
+    "dev": "gatsby clean && gatsby develop --open",
     "format": "prettier --write \"**/*.{js,jsx,json,md,mdx}\"",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
