--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@nivo/core": "0.80.0",
     "@nivo/line": "0.80.0",
     "gatsby": "5.0.1",
-    "gatsby-plugin-mdx": "5.0.0",
-    "gatsby-plugin-sharp": "5.0.0",
-    "gatsby-remark-images": "7.0.0",
-    "gatsby-remark-mermaid": "file:.yalc/gatsby-remark-mermaid",
-    "gatsby-source-filesystem": "5.0.0",
-    "mdast-util-to-string": "^2.0.0",
+    "gatsby-plugin-mdx": "5.1.0",
+    "gatsby-plugin-sharp": "5.1.0",
+    "gatsby-remark-images": "7.1.0",
+    "gatsby-remark-mermaid": "^3.0.1",
+    "gatsby-source-filesystem": "5.1.0",
+    "mdast-util-to-string": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
