--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+.DS_Store
 public
 .yalc
 yalc.lock
@@ -12,5 +13,3 @@ yalc.lock
 !.yarn/sdks
 !.yarn/versions
 yalc.lock
-
-node_modules.nosync
