--- a/package.json
+++ b/package.json
@@ -2,36 +2,37 @@
   "name": "mdx-starter",
   "description": "Gatsby MDX starter site for experiments.",
   "version": "0.0.1",
-  "type": "commonjs",
   "private": true,
   "license": "0BSD",
   "dependencies": {
-    "@mdx-js/react": "^2.1.5",
+    "@mdx-js/react": "^2.2.1",
     "@nivo/core": "0.80.0",
     "@nivo/line": "0.80.0",
-    "gatsby": "5.1.0",
-    "gatsby-plugin-mdx": "5.1.0",
-    "gatsby-plugin-sharp": "5.1.0",
-    "gatsby-remark-images": "7.1.0",
+    "@spectrum-css/vars": "8.0.0",
+    "gatsby": "5.3.2",
+    "gatsby-plugin-mdx": "5.3.1",
+    "gatsby-plugin-sharp": "5.3.2",
+    "gatsby-remark-images": "7.3.1",
     "gatsby-remark-mermaid": "^3.0.1",
-    "gatsby-source-filesystem": "5.1.0",
-    "mdast-util-to-string": "^2.0.0",
+    "gatsby-source-filesystem": "5.3.1",
+    "khroma": "^2.0.0",
+    "mdast-util-to-string": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
-    "rehype-autolink-headings": "^5.1.0",
-    "rehype-slug": "^4.0.1",
-    "remark-external-links": "^8.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-mermaidjs": "^4.0.0",
-    "remark-unwrap-images": "^2.1.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-external-links": "^9.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mermaidjs": "^4.1.1",
+    "remark-unwrap-images": "^3.0.1",
     "slugify": "^1.6.5",
-    "unist-util-visit": "^2.0.3"
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "puppeteer": "^19.2.2",
-    "puppeteer-core": "^19.2.2"
+    "prettier": "^2.8.1",
+    "puppeteer": "^19.4.1",
+    "puppeteer-core": "^19.4.1"
   },
   "keywords": [
     "gatsby"
