--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "5.8.0",
     "graphiql": "^3.0.5",
     "graphql": "^16.7.1",
+    "graphql-ws": "^5.14.0",
     "khroma": "^2.0.0",
     "mdast-util-to-string": "^3.1.1",
     "react": "^18.2.0",
